Fixes the invisible guide panel taking space.

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -45,6 +45,7 @@ img {
 
 main {
 	margin-top: 100px;
+	overflow:   hidden;
 	padding:    20px 8px 8px 8px;
 	position:   relative;
 }
